# atlatl-public

./: .gitignore  README.md  main.py  pyproject.toml
browser/: human-player-control.js  map.js  play.js  svg-city-marker.js  svg-create-view.js  svg-map-view.js  unit.js  webserver.py
docs/: ATLATL_REPO_GUIDE.md  Atlatl_Documentation.md  game-api.txt  gym-interface.txt  message-sequence.txt  oob-3subs.json  oob-example.json  oob-one-each.json  reward.md
server/: airegistry.py  game.py  gameserver.py  gym_interface.py  gym_main.py  messageserver.py  multigym.py  observation.py  scenario_gen_reg.py  server.py  status.py  unit.py
server/ai/: mcts.py  pass_agg.py  pass_agg_setup.py  pass_agg_setup_fog.py  scoring.py  state_eval_gpu.py
server/portabletorch/: portabletorch.py
server/sbl3/: train_cnn_sbl3.py  train_mlp_sbl3.py  train_multigym.py  train_viz_demo.py
